[gd_scene load_steps=11 format=3 uid="uid://cbwmpok2iidfy"]

[ext_resource type="Theme" uid="uid://bqyj23m0yjbg4" path="res://Assets/main_ui.tres" id="1_dad11"]
[ext_resource type="Script" uid="uid://dcsapgfvrvky4" path="res://Scripts/content_container.gd" id="2_0plhj"]
[ext_resource type="Texture2D" uid="uid://b58jfkk5s84b5" path="res://Assets/Textures/banner_classic_curtain.png" id="2_jb7od"]
[ext_resource type="FontFile" uid="uid://nc1qb36126oy" path="res://Assets/Fonts/Roboto-VariableFont_wdth,wght.ttf" id="3_26wen"]
[ext_resource type="Texture2D" uid="uid://bdm5d48g0sk2u" path="res://Assets/Textures/hexagon_brown.png" id="3_a88xp"]
[ext_resource type="Script" uid="uid://c48j6lxh03awv" path="res://Scripts/choice_button.gd" id="3_nsaw5"]
[ext_resource type="FontFile" uid="uid://djgbf3w4crf5u" path="res://Assets/Fonts/Montserrat-VariableFont_wght.ttf" id="4_vv3mv"]
[ext_resource type="FontFile" uid="uid://c2yclinqxg3oq" path="res://Assets/Fonts/Montserrat-Medium.ttf" id="6_vv3mv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_26wen"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jb7od"]
bg_color = Color(0.972549, 0.972549, 0.972549, 0)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_dad11")

[node name="MainContentWindow" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 1285.0
offset_bottom = 1080.0

[node name="Panel" type="Panel" parent="MainContentWindow"]
layout_mode = 2
theme_type_variation = &"ReadingPanelLight"

[node name="MarginContainer" type="MarginContainer" parent="MainContentWindow/Panel"]
layout_mode = 0
offset_left = 15.0
offset_top = 16.0
offset_right = 1268.0
offset_bottom = 1063.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MainContentWindow/Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="MarginContainer" type="MarginContainer" parent="MainContentWindow/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 60
theme_override_constants/margin_right = 40

[node name="ScrollContainer" type="ScrollContainer" parent="MainContentWindow/Panel/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ContentContainer" type="VBoxContainer" parent="MainContentWindow/Panel/MarginContainer/VBoxContainer/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("2_0plhj")

[node name="Label" type="Label" parent="MainContentWindow/Panel/MarginContainer/VBoxContainer/MarginContainer/ScrollContainer/ContentContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_26wen")
theme_override_font_sizes/font_size = 40
text = "Title"

[node name="StatIndicator" type="RichTextLabel" parent="MainContentWindow/Panel/MarginContainer/VBoxContainer/MarginContainer/ScrollContainer/ContentContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("1_dad11")
theme_override_fonts/normal_font = ExtResource("3_26wen")
theme_override_font_sizes/normal_font_size = 15
bbcode_enabled = true
text = " "
fit_content = true

[node name="TextureRect" type="TextureRect" parent="MainContentWindow/Panel/MarginContainer/VBoxContainer/MarginContainer/ScrollContainer/ContentContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="MainContentWindow/Panel/MarginContainer/VBoxContainer/MarginContainer/ScrollContainer/ContentContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("3_26wen")
theme_override_fonts/bold_font = ExtResource("4_vv3mv")
theme_override_font_sizes/bold_italics_font_size = 20
theme_override_font_sizes/italics_font_size = 20
theme_override_font_sizes/mono_font_size = 20
theme_override_font_sizes/normal_font_size = 25
theme_override_font_sizes/bold_font_size = 20
bbcode_enabled = true
text = "Placeholder Text"
fit_content = true
scroll_active = false

[node name="MarginContainer" type="MarginContainer" parent="MainContentWindow/Panel/MarginContainer/VBoxContainer/MarginContainer/ScrollContainer/ContentContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MainContentWindow/Panel/MarginContainer/VBoxContainer/MarginContainer/ScrollContainer/ContentContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 30

[node name="ChoiceContainer" type="PanelContainer" parent="MainContentWindow/Panel/MarginContainer/VBoxContainer/MarginContainer/ScrollContainer/ContentContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_26wen")
script = ExtResource("3_nsaw5")

[node name="Button" type="Button" parent="MainContentWindow/Panel/MarginContainer/VBoxContainer/MarginContainer/ScrollContainer/ContentContainer/MarginContainer/VBoxContainer/ChoiceContainer"]
layout_mode = 2
focus_mode = 0

[node name="MarginContainer" type="MarginContainer" parent="MainContentWindow/Panel/MarginContainer/VBoxContainer/MarginContainer/ScrollContainer/ContentContainer/MarginContainer/VBoxContainer/ChoiceContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 9
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 9

[node name="Label" type="Label" parent="MainContentWindow/Panel/MarginContainer/VBoxContainer/MarginContainer/ScrollContainer/ContentContainer/MarginContainer/VBoxContainer/ChoiceContainer/MarginContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_vv3mv")
theme_override_font_sizes/font_size = 24
text = "Choice Text"
autowrap_mode = 3

[node name="ChoiceContainer2" type="PanelContainer" parent="MainContentWindow/Panel/MarginContainer/VBoxContainer/MarginContainer/ScrollContainer/ContentContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_26wen")
script = ExtResource("3_nsaw5")
choice_index = 2

[node name="Button" type="Button" parent="MainContentWindow/Panel/MarginContainer/VBoxContainer/MarginContainer/ScrollContainer/ContentContainer/MarginContainer/VBoxContainer/ChoiceContainer2"]
layout_mode = 2
focus_mode = 0

[node name="MarginContainer" type="MarginContainer" parent="MainContentWindow/Panel/MarginContainer/VBoxContainer/MarginContainer/ScrollContainer/ContentContainer/MarginContainer/VBoxContainer/ChoiceContainer2"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 9
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 9

[node name="Label" type="Label" parent="MainContentWindow/Panel/MarginContainer/VBoxContainer/MarginContainer/ScrollContainer/ContentContainer/MarginContainer/VBoxContainer/ChoiceContainer2/MarginContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_vv3mv")
theme_override_font_sizes/font_size = 24
text = "Choice Text"

[node name="ChoiceContainer3" type="PanelContainer" parent="MainContentWindow/Panel/MarginContainer/VBoxContainer/MarginContainer/ScrollContainer/ContentContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_26wen")
script = ExtResource("3_nsaw5")
choice_index = 3

[node name="Button" type="Button" parent="MainContentWindow/Panel/MarginContainer/VBoxContainer/MarginContainer/ScrollContainer/ContentContainer/MarginContainer/VBoxContainer/ChoiceContainer3"]
layout_mode = 2
focus_mode = 0

[node name="MarginContainer" type="MarginContainer" parent="MainContentWindow/Panel/MarginContainer/VBoxContainer/MarginContainer/ScrollContainer/ContentContainer/MarginContainer/VBoxContainer/ChoiceContainer3"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 9
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 9

[node name="Label" type="Label" parent="MainContentWindow/Panel/MarginContainer/VBoxContainer/MarginContainer/ScrollContainer/ContentContainer/MarginContainer/VBoxContainer/ChoiceContainer3/MarginContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_vv3mv")
theme_override_font_sizes/font_size = 24
text = "Choice Text"

[node name="Inventory" type="HBoxContainer" parent="MainContentWindow/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Quit_Dialog" type="AcceptDialog" parent="MainContentWindow/Panel/MarginContainer/VBoxContainer/Inventory"]
title = "Exit Dialog"
position = Vector2i(0, 36)
size = Vector2i(612, 366)
ok_button_text = "Back"

[node name="Label" type="Label" parent="MainContentWindow/Panel/MarginContainer/VBoxContainer/Inventory/Quit_Dialog"]
offset_left = 8.0
offset_top = 8.0
offset_right = 604.0
offset_bottom = 285.0
text = "Your game will be saved!"

[node name="VBoxContainer" type="VBoxContainer" parent="MainContentWindow/Panel/MarginContainer/VBoxContainer/Inventory/Quit_Dialog"]
offset_left = 8.0
offset_top = 102.0
offset_right = 604.0
offset_bottom = 285.0

[node name="Exit_Menu" type="Button" parent="MainContentWindow/Panel/MarginContainer/VBoxContainer/Inventory/Quit_Dialog/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Exit to menu"

[node name="Exit_Desktop" type="Button" parent="MainContentWindow/Panel/MarginContainer/VBoxContainer/Inventory/Quit_Dialog/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Exit to desktop"

[node name="Sidebar" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 1285.0
offset_right = 1919.0
offset_bottom = 1080.0
theme_override_styles/panel = SubResource("StyleBoxFlat_jb7od")

[node name="Panel" type="Panel" parent="Sidebar"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Sidebar/Panel"]
layout_mode = 0
offset_right = 633.0
offset_bottom = 1082.0
theme_override_constants/margin_top = 45

[node name="VBoxContainer" type="VBoxContainer" parent="Sidebar/Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="Name Banner" type="CenterContainer" parent="Sidebar/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Sidebar/Panel/MarginContainer/VBoxContainer/Name Banner"]
layout_mode = 2
texture = ExtResource("2_jb7od")

[node name="Label" type="Label" parent="Sidebar/Panel/MarginContainer/VBoxContainer/Name Banner"]
layout_mode = 2
text = "Player Statistics"

[node name="HBoxContainer" type="HBoxContainer" parent="Sidebar/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 70

[node name="Skill_1" type="TextureRect" parent="Sidebar/Panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("3_a88xp")

[node name="CenterContainer" type="CenterContainer" parent="Sidebar/Panel/MarginContainer/VBoxContainer/HBoxContainer/Skill_1"]
layout_mode = 0
offset_left = 16.0
offset_top = 41.0
offset_right = 80.0
offset_bottom = 88.0

[node name="Health_Label" type="Label" parent="Sidebar/Panel/MarginContainer/VBoxContainer/HBoxContainer/Skill_1/CenterContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "X"

[node name="Skill_2" type="TextureRect" parent="Sidebar/Panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("3_a88xp")

[node name="CenterContainer" type="CenterContainer" parent="Sidebar/Panel/MarginContainer/VBoxContainer/HBoxContainer/Skill_2"]
layout_mode = 0
offset_left = 16.0
offset_top = 41.0
offset_right = 80.0
offset_bottom = 88.0

[node name="Mana_Label" type="Label" parent="Sidebar/Panel/MarginContainer/VBoxContainer/HBoxContainer/Skill_2/CenterContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "X"

[node name="Skill_3" type="TextureRect" parent="Sidebar/Panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("3_a88xp")

[node name="CenterContainer" type="CenterContainer" parent="Sidebar/Panel/MarginContainer/VBoxContainer/HBoxContainer/Skill_3"]
layout_mode = 0
offset_left = 16.0
offset_top = 41.0
offset_right = 80.0
offset_bottom = 88.0

[node name="Coins_Label" type="Label" parent="Sidebar/Panel/MarginContainer/VBoxContainer/HBoxContainer/Skill_3/CenterContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "X"

[node name="MarginContainer2" type="MarginContainer" parent="Sidebar/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 91
theme_override_constants/margin_top = -50
theme_override_constants/margin_right = 0

[node name="Skill_Labels" type="HBoxContainer" parent="Sidebar/Panel/MarginContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2
theme_override_constants/separation = 89

[node name="Label" type="Label" parent="Sidebar/Panel/MarginContainer/VBoxContainer/MarginContainer2/Skill_Labels"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_26wen")
text = "Health"

[node name="Label2" type="Label" parent="Sidebar/Panel/MarginContainer/VBoxContainer/MarginContainer2/Skill_Labels"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_26wen")
text = "Mana"

[node name="Label3" type="Label" parent="Sidebar/Panel/MarginContainer/VBoxContainer/MarginContainer2/Skill_Labels"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_26wen")
text = "Coins"

[node name="MarginContainer" type="MarginContainer" parent="Sidebar/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 45
theme_override_constants/margin_top = 430
theme_override_constants/margin_right = 0

[node name="GridContainer" type="GridContainer" parent="Sidebar/Panel/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/h_separation = 2
theme_override_constants/v_separation = 10
columns = 3

[node name="Main_Menu_Button" type="Button" parent="Sidebar/Panel/MarginContainer/VBoxContainer/MarginContainer/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("6_vv3mv")
theme_override_font_sizes/font_size = 20
text = "Main Menu"

[node name="TTS_Button" type="Button" parent="Sidebar/Panel/MarginContainer/VBoxContainer/MarginContainer/GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_vv3mv")
text = "Toggle TTS"

[node name="Save_Button" type="Button" parent="Sidebar/Panel/MarginContainer/VBoxContainer/MarginContainer/GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_vv3mv")
theme_override_font_sizes/font_size = 20
text = "Save"

[node name="Load_Button" type="Button" parent="Sidebar/Panel/MarginContainer/VBoxContainer/MarginContainer/GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_vv3mv")
text = "Load"

[node name="Quit_Button" type="Button" parent="Sidebar/Panel/MarginContainer/VBoxContainer/MarginContainer/GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_vv3mv")
text = "Quit"

[connection signal="pressed" from="MainContentWindow/Panel/MarginContainer/VBoxContainer/MarginContainer/ScrollContainer/ContentContainer/MarginContainer/VBoxContainer/ChoiceContainer/Button" to="MainContentWindow/Panel/MarginContainer/VBoxContainer/MarginContainer/ScrollContainer/ContentContainer/MarginContainer/VBoxContainer/ChoiceContainer" method="_on_button_pressed"]
[connection signal="pressed" from="MainContentWindow/Panel/MarginContainer/VBoxContainer/MarginContainer/ScrollContainer/ContentContainer/MarginContainer/VBoxContainer/ChoiceContainer2/Button" to="MainContentWindow/Panel/MarginContainer/VBoxContainer/MarginContainer/ScrollContainer/ContentContainer/MarginContainer/VBoxContainer/ChoiceContainer2" method="_on_button_pressed"]
[connection signal="pressed" from="MainContentWindow/Panel/MarginContainer/VBoxContainer/MarginContainer/ScrollContainer/ContentContainer/MarginContainer/VBoxContainer/ChoiceContainer3/Button" to="MainContentWindow/Panel/MarginContainer/VBoxContainer/MarginContainer/ScrollContainer/ContentContainer/MarginContainer/VBoxContainer/ChoiceContainer3" method="_on_button_pressed"]
[connection signal="pressed" from="Sidebar/Panel/MarginContainer/VBoxContainer/MarginContainer/GridContainer/Main_Menu_Button" to="MainContentWindow/Panel/MarginContainer/VBoxContainer/MarginContainer/ScrollContainer/ContentContainer" method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="Sidebar/Panel/MarginContainer/VBoxContainer/MarginContainer/GridContainer/TTS_Button" to="MainContentWindow/Panel/MarginContainer/VBoxContainer/MarginContainer/ScrollContainer/ContentContainer" method="_on_tts_button_pressed"]
[connection signal="pressed" from="Sidebar/Panel/MarginContainer/VBoxContainer/MarginContainer/GridContainer/Save_Button" to="MainContentWindow/Panel/MarginContainer/VBoxContainer/MarginContainer/ScrollContainer/ContentContainer" method="_on_save_pressed"]
[connection signal="pressed" from="Sidebar/Panel/MarginContainer/VBoxContainer/MarginContainer/GridContainer/Load_Button" to="MainContentWindow/Panel/MarginContainer/VBoxContainer/MarginContainer/ScrollContainer/ContentContainer" method="_on_load_pressed"]
[connection signal="pressed" from="Sidebar/Panel/MarginContainer/VBoxContainer/MarginContainer/GridContainer/Quit_Button" to="MainContentWindow/Panel/MarginContainer/VBoxContainer/MarginContainer/ScrollContainer/ContentContainer" method="_on_quit_button_pressed"]
